add create_db folder and settings dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       MYSQL_ROOT_PASSWORD: root
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./create_db:/docker-entrypoint-initdb.d
       
   laravel:
     build: .
