--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   mysql:
-    image: mysql:5.7
+    image: mysql:lastest
     command: --default-authentication-plugin=mysql_native_password
     ports:
       - "3306:3306"
