--- a/laravel/.env
+++ b/laravel/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:D5XYCKBmnUawWuGafplNfG3Ukoi4foYLw7rFpRl69n0=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
